syntax = "proto3";

/*  <!-- markdownlint-disable -->
Messages to support stat data injection exchange in the platform.
*/

package grid.v1;
option go_package = "./grid/v1";

/* A Stat of PMU data, check IEEE C37.118 standard for more details.
Headers used in rabbitMQ:
* `id` (string): id of the `Stat` message.
* `producerId` (string): the id of the PMU linked to the Stat.
* `timestampId` (int64): related measurement Unix msec timestamp (if any)
*/

message Stat {
    int64 measuredAt = 1; // The time of creation of the stat data (Unix msec timestamp).
    uint32 error = 2; // Error code uint8
	bool sync = 3; // Synchronization status   
	bool sorting = 4; // Sorting status
	bool trigger = 5; // Trigger status
	bool configChange = 6; // Configuration change status
	bool dataModified = 7; // Data modification status
	uint32 timeQuality    = 8; // Time quality uint8
	uint32 unlockedTime   = 9; // Unlocked time uint8
	uint32 triggerReason  = 10; // Trigger reason uint8
}
